# linear_probes

./: .gitignore  DESIGN_DOC.md  README.md  main.py  pyproject.toml
activation/: __init__.py  activation_extractor.py  storage.py  types.py
configs/: __init__.py  activation_config.py  model_config.py  probe_config.py  types.py
dataset/: __init__.py  probing_dataset.py  samples.py  types.py
linear_probes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/: __init__.py  activation.py
probes/: __init__.py  analyze.py  linear.py  sweep.py  types.py
tests/: test_activation_extractor.py  test_linear_probe_trainer.py  test_probe_sweep_orchestrator.py  test_probing_dataset.py
