[project]
name = "linear-probes"
version = "0.1.0"
description = "Mechanistic interpretability toolkit for activation extraction and probing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nnterp>=1.2.2",
    "safetensors",
    "torch",
    "typing_extensions",
    "torchmetrics",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["activation*", "configs*", "dataset*", "probes*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
